<resources>
    <string name="app_name">ENSYFI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_occured">Failed to connect to the server. Please try again.</string>
    <string name="empty" />
    <string name="alert_button_ok">Ok</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="progress_loading">Loading...</string>
    <string name="no_connectivity">Please check your internet connectivity and try again.</string>

    <string name="app_name_display">Ensyfi</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!--School Id login-->
    <!---->
    <string name="school_id_login">School ID</string>

    <!--User login-->
    <!---->
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="forgot_content">We will send a code to your registered EMAIL or MOBILE, using which you can login to create a new password.</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_user_name">User name cannot be empty</string>
    <string name="enter_password">Password cannot be empty</string>
    <string name="min_pass_length">Short passwords are easy to guess! Try one with at least 8 characters...</string>
    <string name="password_mismatch">Password mismatch</string>


    <!--Dashboard-->
    <!---->
    <string name="attendance">ATTENDANCE</string>
    <string name="class_test">CLASS TEST &amp; HOMEWORK</string>
    <string name="exam">EXAM &amp; RESULT</string>
    <string name="time_table">TIME TABLE</string>
    <string name="events">EVENTS</string>
    <string name="communication">COMMUNICATION</string>

    <!--Edit Profile-->
    <!---->
    <string name="mail">E-mail ID</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>

    <!--Create or Review Test-->
    <!---->
    <string name="create">Create Class Test / Homework</string>
    <string name="view">View Class Test / Homework</string>
    <string name="class_t">Class Test</string>
    <string name="homework">Homework</string>
    <string name="sclass">Class</string>
    <string name="date">Date</string>
    <string name="sub">Subject</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!--Custom calendar view-->
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>


</resources>
