<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340px"
        android:layout_marginTop="30px">

        <RelativeLayout
            android:id="@+id/attendance"
            android:layout_width="280px"
            android:layout_height="280px"
            android:layout_gravity="center"
            android:layout_marginLeft="60px"
            android:background="@drawable/round_btn_plain">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4px"
                android:background="@drawable/attendance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageView2"
                android:layout_alignRight="@+id/imageView2"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="34px"
                android:paddingLeft="30px"
                android:text="@string/attendance"
                android:textSize="24px" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/class_test"
            android:layout_width="280px"
            android:layout_height="280px"
            android:layout_gravity="center"
            android:layout_marginLeft="60px"
            android:background="@drawable/round_btn_plain">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="40px"
                android:layout_marginTop="6px"
                android:background="@drawable/classtest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20px"
                android:layout_marginLeft="24px"
                android:paddingLeft="4px"
                android:text="@string/class_test"
                android:textSize="24px" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/exam"
            android:layout_width="280px"
            android:layout_height="280px"
            android:layout_gravity="center"
            android:layout_marginLeft="60px"
            android:background="@drawable/round_btn_plain">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="10px"
                android:layout_marginTop="4px"
                android:background="@drawable/exam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="32px"
                android:paddingLeft="24px"
                android:text="@string/exam"
                android:textSize="24px" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/time_table"
            android:layout_width="280px"
            android:layout_height="280px"
            android:layout_gravity="center"
            android:layout_marginLeft="60px"
            android:background="@drawable/round_btn_plain">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_marginLeft="40px"
                android:layout_marginTop="6px"
                android:background="@drawable/timetable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageView5"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/imageView5"
                android:layout_marginBottom="30px"
                android:paddingLeft="4px"
                android:text="@string/time_table"
                android:textSize="24px" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340px">

        <RelativeLayout
            android:id="@+id/events"
            android:layout_width="280px"
            android:layout_height="280px"
            android:layout_gravity="center"
            android:layout_marginLeft="60px"
            android:background="@drawable/round_btn_plain">

            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_marginLeft="40px"
                android:layout_marginTop="12px"
                android:background="@drawable/events" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="30px"
                android:layout_marginLeft="70px"
                android:paddingLeft="2px"
                android:text="@string/events"
                android:textSize="24px" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/communication"
            android:layout_width="280px"
            android:layout_height="280px"
            android:layout_gravity="center"
            android:layout_marginLeft="60px"
            android:background="@drawable/round_btn_plain">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_marginLeft="40px"
                android:layout_marginTop="6px"
                android:background="@drawable/communication" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="26px"
                android:paddingLeft="8px"
                android:text="@string/communication"
                android:textSize="24px" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

