<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appColor"
                android:minHeight="?attr/actionBarSize"/>

            <ImageView
                android:id="@+id/back_res"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:minHeight="?attr/actionBarSize"
                android:paddingLeft="15dp"
                android:src="@drawable/ic_arrow_back_white_48dp" />

            <TextView
                android:id="@+id/tvtitletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:minHeight="?attr/actionBarSize"
                android:paddingLeft="10dp"
                android:text="Profile"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/actionbarTextSize" />
        </RelativeLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="@color/appColor"
        android:orientation="vertical">

        <com.palprotech.eduappparentsstudents.customview.CircleImageView
            android:id="@+id/image_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/typename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            />

        <!--<android.support.design.widget.FloatingActionButton-->
            <!--android:id="@+id/fab"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="@dimen/fab_margin"-->
            <!--android:src="@drawable/ic_mode_edit_white_24dp"-->
            <!--app:backgroundTint="@color/city_text_color" />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/username"/>



        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="••••••••"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/mail"
            android:textSize="20dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:id="@+id/txtmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="abc@xyz.com"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/appColor"/>

        <EditText
            android:id="@+id/txtaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student 1"
            android:textColor="@color/appColor"
            android:layout_gravity="left"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="80dp"
            android:background="@drawable/textcolorborder"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student 2"
            android:textColor="@color/appColor"
            android:layout_gravity="right"
            android:layout_marginTop="-48dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textcolorborder" />



    </LinearLayout>

    </LinearLayout>

</ScrollView>